# hal_code

aux_av_in/: .audio_init.ko.cmd  .audio_init.mod.o.cmd  .audio_init.o.cmd  .aux_det.ko.cmd  .aux_det.mod.o.cmd  .aux_det.o.cmd  Makefile  audio_init.c  aux_det.ko  fsync-app  fsync-app.c  modules.order
aux_av_in/.tmp_versions/: aux_det.mod
aux_av_in/fsync_测试代码/: fsync-app  fsync-app.c  sync_drv.c  sync_drv.ko
aux_av_in/hal_zjc/svn-co/.svn/: wc.db
aux_av_in/hal_zjc/svn-co/source/audio_switcher/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/audio_switcher/src/: audio_swither_74HC4052.c  audio_swither_74HC4052_old.c
aux_av_in/hal_zjc/svn-co/source/audio_switcher/src/include/: hal_audio_switcher.h
aux_av_in/hal_zjc/svn-co/source/aux_in_status_check/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/aux_in_status_check/src/: aux_in_status_check_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/av_in/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/av_in/src/: av_in_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/av_in/src/include/: hal_av_in.h
aux_av_in/hal_zjc/svn-co/source/backlight/src/: backlight_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/beeper/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/beeper/src/: beeper_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/beeper_old/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/beeper_old/src/: beeper_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/config/src/: config_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/cvbs_check/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/cvbs_check/src/: cvbs_check_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/diagnosis/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/dvr_display/src/: dvr_display_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/gps/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/gps/src/: gps_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/iap_auth/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/iap_auth/src/: iap_auth_2.0C.c
aux_av_in/hal_zjc/svn-co/source/iphone_switcher/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/iphone_switcher/src/: iphone_config_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/setting_value/src/: setting_value_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/touchscreen/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/touchscreen/src/: touchscreen_csratlas7.c
aux_av_in/hal_zjc/svn-co/source/upgrade_a7/src/: upgrade_a7_atlas7.c
aux_av_in/hal_zjc/svn-co/source/upgrade_m3/: CMakeLists.txt
aux_av_in/hal_zjc/svn-co/source/video_switcher/: CMakeLists.txt
(+10 files in other folders)
